# nlp-pikogpt-funkyai

./: .gitignore  README.md  main.py  pyproject.toml
configs/: train_deep.toml  train_default.toml  train_fullcontext.toml  train_large.toml  train_medium_test.toml  train_smoke.toml  train_testrun.toml
docs/: CONTRIBUTION.md  Project_Planning.xlsx  preprocessing.md  stage.md  train.md
exercise notebooks/: EX05_Hyperparam.ipynb
exercise notebooks/EX06/: EX06_distributedComputing.ipynb  train_ddp.py
notebooks/: 01_EDA.ipynb
scripts/: create_smoke_datasets.py  full_training_run.sh
src/data/: preprocessing.py
src/inference/: __init__.py  stage.py
src/training/: __init__.py  config.py  stage.py  utils.py
