[project]
name = "nlp-pikogpt-funkyai"
version = "0.1.0"
description = "PikoGPT - Building an LLM from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "langdetect",
    "pandas",
    "tqdm",
    "matplotlib",
    "jupyter",
    "torch",
    "transformers",
    "huggingface-hub",
    "pydantic>=2",
    "pyyaml",
    "tomli; python_version < '3.11'",
]
